<resources>
  <string name="app_name">Particity Técnico</string>
  <string name="default_city">Cascavel</string>
  <string name="default_state">Paraná</string>
  <string name="default_country">Brasil</string>
  <string name="action_settings">Settings</string>
  <string name="title_activity_documents">DocumentsActivity</string>
  <string name="tab_documents">Documentos</string>
  <string name="title_activity_document_details">DocumentDetailsActivity</string>
  <string name="title_activity_profile">ProfileActivity</string>
  <string name="title_activity_pick_map_location">PickMapLocationActivity</string>
  <string name="inventory_item_extra_integer"/>
  <string name="inventory_item_extra_meters">m</string>
  <string name="inventory_item_extra_centimeters">cm</string>
  <string name="inventory_item_extra_kilometers">km</string>
  <string name="inventory_item_extra_years">anos</string>
  <string name="inventory_item_extra_months">meses</string>
  <string name="inventory_item_extra_days">dias</string>
  <string name="inventory_item_extra_hours">horas</string>
  <string name="inventory_item_extra_seconds">segundos</string>
  <string name="inventory_item_extra_angle">°</string>
  <string name="report_inclusion_date_title">Data de inclusão</string>
  <string name="case_step_extra_integer"/>
  <string name="case_step_extra_decimal"/>
  <string name="case_step_extra_meter">m</string>
  <string name="case_step_extra_centimeter">cm</string>
  <string name="case_step_extra_kilometer">km</string>
  <string name="case_step_extra_year">anos</string>
  <string name="case_step_extra_month">meses</string>
  <string name="case_step_extra_day">dias</string>
  <string name="case_step_extra_hour">horas</string>
  <string name="case_step_extra_second">segundos</string>
  <string name="case_step_extra_angle">°</string>
  <string name="lab_choose_option">Choose option</string>
  <string name="lab_choose_from_gallery">Choose from Gallery</string>
  <string name="lab_take_picture">Take a Picture</string>
  <string name="lab_capture_video">Capture Video</string>
  <string name="lab_ok">OK</string>
  <string name="lab_cancel">Cancel</string>
  <string name="activity_title_reports">Relatos</string>
  <string name="activity_title_report_item">Item de Relato</string>
  <string name="activity_title_create_report_item">Criar item de Relato</string>
  <string name="error_network">Não foi possível conectar ao servidor</string>
  <string name="usure">Tem certeza?</string>
  <string name="delete">Excluir</string>
  <string name="cancel">Cancelar</string>
  <string name="delete_report_confirm_text">Tem certeza de que deseja excluir o relato? Essa operação é irreversível</string>
  <string name="delete_case_confirm_text">Tem certeza de que deseja excluir o caso? Essa operação é irreversível e podem haver etapas pendentes de sincronização.</string>
  <string name="finish_case_confirm_text">Tem certeza de que deseja finalizar o caso? Podem haver etapas pendentes de sincronização.</string>
  <string name="delete_inventory_confirm_text">Tem certeza de que deseja excluir o ítem de inventário? Essa operação é irreversível</string>
  <string name="report_history_someone_changedstatus">alterou o estado do relato</string>
  <string name="report_history_changedstatus">O estado do relato foi alterado</string>
  <string name="report_history_from">de</string>
  <string name="report_history_to">para</string>
  <string name="report_history_someone_changedcategory">alterou a categoria do relato</string>
  <string name="report_history_changedcategory">A categoria do relato foi alterada</string>
  <string name="report_history_someone_forwarded">encaminhou o relato para o grupo</string>
  <string name="report_history_forwarded">O relato foi encaminhado</string>
  <string name="report_history_fromgroup">do group</string>
  <string name="report_history_togroup">para o grupo</string>
  <string name="report_history_someone_assigneduser">associou o relato </string>
  <string name="report_history_assigneduser">O relato foi associado</string>
  <string name="report_history_fromuser">do usuário</string>
  <string name="report_history_touser">para o usuário</string>
  <string name="report_history_inserted">inseriu</string>
  <string name="report_history_privatecomment">uma resposta privada para o solicitante:</string>
  <string name="report_history_publiccoment">uma resposta pública para o solicitante:</string>
  <string name="report_history_internalcommend">o comentário interno:</string>
  <string name="report_history_created">criou o relato</string>
  <string name="report_history_withstatus">com o status</string>
  <string name="report_history_someone_changedproperty">alterou a propriedade</string>
  <string name="report_history_changedproperty">A propriedade foi alterada</string>
  <string name="report_property_name_address">Endereço</string>
  <string name="report_property_name_description">Descrição</string>
  <string name="report_creation_failed_address">Para criar um relato é necessário preencher seu endereço</string>
  <string name="deleting_report">Excluindo relato…</string>
  <string name="report_deleted">O relato foi excluído.</string>
  <string name="comment_private">Resposta privada</string>
  <string name="listview_noitems">Não há itens para exibir.</string>
  <string name="report_list_offline">Seu dispositivo está sem conexão com o servidor. Exibindo apenas itens armazenados localmente. Toque aqui para tentar novamente.</string>
  <string name="fill_case_offline">Seu dispositivo está sem conexão com o servidor. Exibindo apenas campos que podem ser preenchidos localmente. Toque aqui para tentar novamente.</string>
  <string name="map_location_offline_warning">Seu dispositivo está sem conexão com a internet. Por favor, conecte-se e toque aqui para recarregar a tela.</string>
  <string name="search_by_protocol_hint">Busque por protocolo ou endereço</string>
  <string name="search_by_name_address_hint">Busque por nome ou endereço</string>
  <string name="internal_comments_title">Observações internas</string>
  <string name="creating_report">Criando relato…</string>
  <string name="included_at">"Incluído em "</string>
  <string name="filter_by_status_title">Filtrar itens por status</string>
  <string name="filter_inventory_by_status_title">Filtrar itens por status</string>
  <string name="filter_reports_title">Filtrar itens</string>
  <string name="all_status_filter">Todos os estados</string>
  <string name="all_status_filter_inventory">Todos os estados</string>
  <string name="all_categories_filter_inventory">Todas as categorias</string>
  <string name="new_inventory_item_title">Novo item de inventário</string>
  <string name="message_report_created">O relato foi criado</string>
  <string name="select_items_to_add_hint">Selecione os itens que deseja adicionar ao documento</string>
  <string name="suggestion_zoom_in_map">Para visualizar os itens desta região, favor aproximar o mapa</string>
  <string name="add_title">Adicionar</string>
  <string name="cancel_title">Cancelar</string>
  <string name="message_wait_loading_data">Aguarde enquanto os dados são carregados</string>
  <string name="message_no_items_to_show">Não há itens para exibir</string>
  <string name="users_selected_text"> usuários selecionados</string>
  <string name="all_users">Todos os usuários</string>
  <string name="clear_selected_items">Limpar itens selecionados</string>
  <string name="categories_selected_filter">categorias selecionadas</string>
  <string name="all_categories_filter">Todas as categorias</string>
  <string name="status_selected_filter">estados selecionados</string>
  <string name="define_date_filter">Defina uma data</string>
  <string name="define_filter_hint">Defina um filtro</string>
  <string name="related_to_me_filter">Associados a mim</string>
  <string name="related_to_my_group_filter">Associados a meu grupo</string>
  <string name="with_categories_filter_report">Com as categorias</string>
  <string name="with_status_filter_title">Com os estados</string>
  <string name="created_from_date_filter">Criados a partir de</string>
  <string name="until_text">Até</string>
  <string name="requested_by_filter">Solicitados por</string>
  <string name="created_by_filter">Criados por</string>
  <string name="notifications_title">Notificações emitidas</string>
  <string name="confirm_title">Confirmar</string>
  <string name="show_reports_having_title">Exibir relatos contendo</string>
  <string name="days_since_last_notification_title">Dias desde a última notificação emitida</string>
  <string name="days_for_last_notification_title">Dias para o vencimento da última notificação emitida</string>
  <string name="days_for_overdue_notification_title">Dias em atraso para notificações vencidas</string>
  <string name="with_minimum_of">Com mínimo de</string>
  <string name="minimum_of_title">Mínimo de</string>
  <string name="error_category_not_found">"#### Category not found: "</string>
  <string name="protocol_title">Protocolo</string>
  <string name="inclusion_date_title">Data de inclusão</string>
  <string name="creation_date_title">Data de criação</string>
  <string name="edition_date_title">Data de modificação:</string>
  <string name="ago">atrás</string>
  <string name="flow">fluxo</string>
  <string name="please_select_status">Por favor, selecione um status</string>
  <string name="change_responsable_user_text">Alterar usuário responsável por relato</string>
  <string name="change_responsable_group_text">Alterar grupo responsável por relato</string>
  <string name="report_info_title">Dados do relato</string>
  <string name="change_title">Alterar</string>
  <string name="select_hint">Selecione…</string>
  <string name="please_assign_responsable_group_message">Por favor, selecione um grupo responsável primeiro!</string>
  <string name="find_on_map_button">Localizar no mapa</string>
  <string name="fill_text">Preencher</string>
  <string name="fill_text_hint">Preencha aqui o</string>
  <string name="form">formulário</string>
  <string name="loading_form_message">Gerando formulário…</string>
  <string name="error_loading_inventory_category">Erro ao buscar por categoria de inventário</string>
  <string name="finish_case_title">Finalizar Caso</string>
  <string name="finis_step">Concluir Etapa</string>
  <string name="filter_inventory">Filtrar inventário</string>
  <string name="search_title">Buscar</string>
  <string name="reference_address_title">Ponto de referência</string>
  <string name="category_title">Categoria</string>
  <string name="pick_report_location_title">Localize o relato</string>
  <string name="pick_report_location_hint">Digite o endereço ou arraste o pino até a posição exata</string>
  <string name="update_title">Atualizar</string>
  <string name="see_map_title">Ver Mapa</string>
  <string name="see_list_title">Ver Lista</string>
  <string name="history_title">Histórico</string>
  <string name="save_offline">Armazenar offline</string>
  <string name="delete_offline_item">Exclur cópia local</string>
  <string name="status_title">Status</string>
  <string name="responsable_group_title">Grupo responsável</string>
  <string name="requester_responses">Respostas ao solicitante</string>
  <string name="write_response_hint">Escreva uma resposta</string>
  <string name="see_downloaded_items_title">Ver itens transferidos</string>
  <string name="order_by_name">Ordenar por nome</string>
  <string name="order_by_creation_date">Ordenar por data de criação</string>
  <string name="order_by_last_edition">Ordenar por última modificação</string>
  <string name="order_by_address">Ordenar por endereço</string>
  <string name="clear_filter">Limpar filtros</string>
  <string name="inventory_details_title">Dados do inventário</string>
  <string name="name_title">Nome</string>
  <string name="responsable_user_title">Usuario responsável</string>
  <string name="warning_empty_message">Não há mensagens no momento.</string>
</resources>