<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ntxdev="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ntxdev.zuptecnico.activities.reports.ReportsListActivity">

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/update_title"
        ntxdev:showAsAction="always"
        />

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/search_title"
        ntxdev:showAsAction="always"
        />

    <item
        android:id="@+id/action_items_clear_filter"
        android:title="@string/clear_filter"
        ntxdev:showAsAction="never" />

    <item
        android:id="@+id/action_items_filter"
        android:title="@string/filter_inventory"
        android:icon="@drawable/ic_filter_list_white_24dp"
        ntxdev:showAsAction="ifRoom" />

    <item android:id="@+id/action_map"
        android:icon="@drawable/actionbar_btn_mapa_branco"
        android:title="@string/see_map_title"
        ntxdev:showAsAction="ifRoom"/>

    <item android:id="@+id/action_list"
        android:icon="@drawable/actionbar_btn_lista_branco"
        android:title="@string/see_list_title"
        ntxdev:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_order_modification"
        android:orderInCategory="100"
        android:title="@string/order_by_last_edition"
        ntxdev:showAsAction="never" />

    <item
        android:id="@+id/action_order_creation"
        android:orderInCategory="100"
        android:title="@string/order_by_creation_date"
        ntxdev:showAsAction="never" />

    <item
        android:id="@+id/action_order_name"
        android:orderInCategory="100"
        android:title="@string/order_by_name"
        ntxdev:showAsAction="never" />

    <item
        android:id="@+id/action_items_viewdownloaded"
        android:orderInCategory="100"
        android:title="@string/see_downloaded_items_title"
        ntxdev:showAsAction="never" />
</menu>