<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ntxdev="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.particity.zuptecnico.activities.reports.SearchReportByProtocolActivity">
    <item
        android:id="@+id/action_search"
        ntxdev:actionViewClass="android.support.v7.widget.SearchView"
        ntxdev:showAsAction="always"
        android:icon="@drawable/ic_action_search"
        android:title="@string/search_title" />

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/update_title"
        ntxdev:showAsAction="ifRoom|withText"
        />

    <item
        android:id="@+id/action_items_clear_filter"
        android:title="@string/clear_filter"
        ntxdev:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/action_items_filter"
        android:title="@string/filter_reports_title"
        android:icon="@drawable/ic_filter_list_white_24dp"
        ntxdev:showAsAction="ifRoom|withText"  />

    <item
        android:id="@+id/action_order_address"
        android:orderInCategory="100"
        android:title="@string/order_by_address"
        ntxdev:showAsAction="ifRoom|withText"  />

    <item
        android:id="@+id/action_order_creation"
        android:orderInCategory="100"
        android:title="@string/order_by_creation_date"
        ntxdev:showAsAction="ifRoom|withText"  />

</menu>