<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ntxdev="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ntxdev.zuptecnico.activities.cases.CaseItemDetailsActivity" >

    <item android:id="@+id/action_download"
        android:icon="@drawable/ic_action_download"
        android:title="@string/save_offline"
        ntxdev:showAsAction="ifRoom" />

    <item android:id="@+id/action_delete_local"
        android:icon="@drawable/ic_action_delete_download"
        android:title="@string/delete_offline_item"
        android:visible="false"
        ntxdev:showAsAction="ifRoom"
        />


    <item android:id="@+id/action_delete"
        android:icon="@drawable/ic_action_discard"
        android:title="@string/delete"
        android:orderInCategory="100"
        ntxdev:showAsAction="ifRoom" />

    <item android:id="@+id/action_history"
        android:icon="@drawable/ic_history_white_24dp"
        android:title="@string/history_title"
        android:orderInCategory="100"
        android:visible="false"
        ntxdev:showAsAction="ifRoom" />
</menu>