<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        style="@style/ReportCard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/ReportCardTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inventory_details_title" />

        <TextView
            style="@style/ReportCardPropertyTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_title" />

        <TextView
            android:id="@+id/name"
            style="@style/ReportCardPropertyValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <TextView
            style="@style/ReportCardPropertyTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_property_name_address" />

        <TextView
            android:id="@+id/full_address"
            style="@style/ReportCardPropertyValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <TextView
            style="@style/ReportCardPropertyTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_title" />

        <TextView
            android:id="@+id/category_name"
            style="@style/ReportCardPropertyValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/ReportCardPropertyTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inclusion_date_title" />

        <TextView
            android:id="@+id/creation_date"
            style="@style/ReportCardPropertyValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/ReportCardPropertyTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/status_title"
            android:text="@string/status_title" />

        <TextView
            android:id="@+id/status"
            style="@style/ReportCardPropertyValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
</android.support.v7.widget.CardView>