<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        style="@style/ReportCard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/ReportCardTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_info_title" />

        <TextView
            style="@style/ReportCardPropertyTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/protocol_title" />

        <TextView
            android:id="@+id/protocol"
            style="@style/ReportCardPropertyValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/ReportCardPropertyTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_property_name_address" />

        <TextView
            android:id="@+id/full_address"
            style="@style/ReportCardPropertyValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/ReportCardPropertyTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reference_address_title" />

        <TextView
            android:id="@+id/reference"
            style="@style/ReportCardPropertyValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/ReportCardPropertyTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_property_name_description" />

        <TextView
            android:id="@+id/description"
            style="@style/ReportCardPropertyValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/ReportCardPropertyTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_title" />

        <TextView
            android:id="@+id/category_name"
            style="@style/ReportCardPropertyValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/ReportCardPropertyTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_inclusion_date_title" />

        <TextView
            android:id="@+id/creation_date"
            style="@style/ReportCardPropertyValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/ReportCardPropertyTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status_title" />

        <TextView
            android:id="@+id/status"
            style="@style/ReportCardPropertyValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:layout_marginTop="@dimen/report_card_padding_y"
            android:background="@color/divider_color" />

        <LinearLayout
            android:id="@+id/responsable_group_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:orientation="vertical">

            <TextView
                style="@style/ReportCardPropertyTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/responsable_group_title" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/responsible_group_name"
                    style="@style/ReportCardPropertyValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/report_card_padding_x"
                    android:layout_toLeftOf="@+id/change_responsable_group" />

                <TextView
                    android:id="@+id/change_responsable_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="@string/change_title"
                    android:textAllCaps="true"
                    android:textColor="@color/zupblue"
                    android:textStyle="bold" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/responsable_user_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:orientation="vertical">

            <TextView
                style="@style/ReportCardPropertyTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/responsable_user_title" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/responsible_user_name"
                    style="@style/ReportCardPropertyValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/report_card_padding_x"
                    android:layout_toLeftOf="@+id/change_responsable_user" />

                <TextView
                    android:id="@+id/change_responsable_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="@string/change_title"
                    android:textAllCaps="true"
                    android:textColor="@color/zupblue"
                    android:textStyle="bold" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>