<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
  <android.support.v7.widget.CardView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/report_card_padding_item_left"
      style="@style/ReportCardCard"
      >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        style="@style/ReportCard"
        >

      <TextView
          android:id="@+id/comments_title"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginBottom="@dimen/report_card_padding_y"
          android:text="@string/requester_responses"
          style="@style/ReportCardTitle"
          />

      <LinearLayout
          android:id="@+id/comment_create"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:clickable="true"
          android:orientation="vertical"
          android:layout_marginBottom="@dimen/inventory_padding"
          >

        <TextView
            android:id="@+id/textView40"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/report_card_padding_item_left"
            android:paddingTop="@dimen/report_card_padding_item_left"
            android:text="@string/write_response_hint"
            android:textColor="@color/field_label_color"
            android:textSize="@dimen/activity_vertical_margin"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:background="@color/field_label_color"
            />
      </LinearLayout>

      <ProgressBar
          android:id="@+id/comment_create_progress"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          style="?android:attr/progressBarStyleSmall"
          />

      <com.ntxdev.zuptecnico.ui.ScrollLessListView
          android:id="@+id/report_comments_listview"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/report_card_padding_y"
          android:orientation="vertical"
          />

      <TextView
          android:id="@+id/empty_list"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:text="@string/warning_empty_message"
          android:visibility="gone"
          />

    </LinearLayout>

  </android.support.v7.widget.CardView>
</FrameLayout>